# pai-macros

./: Cargo.toml  README.md
src/: lib.rs
tests/: regscode.rs
