[package]
name = "pai-macros"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "PAI macros"
readme = "README.md"
homepage = "https://github.com/rstenvi/pai-macros"
repository = "https://github.com/rstenvi/pai-macros"
keywords = ["pai"]


[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.48", features = ["full", "printing", "extra-traits"]}
quote = "1.0.35"
proc-macro2 = "1.0.78"

